feat: 서비스 분리, PostgreSQL 전환, Discord 개선 및 배포 설정
- 트랜잭션 분리: MonitorTransactionHandler, ProductMonitorTransactionHandler, ArticleSaverService (REQUIRES_NEW), AlertStatusUpdater 신규 도입
- 서비스 분리: WebCrawlerService, ArticleExtractorService, ArticleService, DiscordWebhookCaller (@CircuitBreaker), SettingService 신규
- DiscordCommandHandler: 유효성 검사 deferReply 이전 이동, KeywordService 원자적 처리, interval 범위 가드 추가
- 삭제 경로 FK 버그 수정: clearKeywordReference / clearProductReference JPQL 벌크 UPDATE, siteService.deleteSite() FK 안전 처리
- SettingInitializer: hasAnySetting() 도입, DataIntegrityViolationException catch, Discord URL 정규식 검증
- PostgreSQL 전환: application-prod.properties, V1~V5 Flyway 마이그레이션, docker-compose PostgreSQL 서비스
- 배포 설정: Dockerfile multi-stage 빌드, docker-compose.yml 환경변수 주입, .env.example 완비
- 테스트 530개+: 신규 서비스/컨트롤러/유틸 테스트 전면 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>